Made the fill handle container smaller to avoid unnecessary overflow in small grid containers

--- a/src/default-sizing.scss
+++ b/src/default-sizing.scss
@@ -6,7 +6,6 @@ $cell-focus-border-width:               2px !default;
 $celleditor-border-width:               2px !default;
 $celleditor-padding-top:                1px !default;
 
-$fill-handle-area:                      40px !default;
 $fill-handle-square:                    6.5px !default;
 $fill-handle-border-width:              1px !default;
 
